[Portfolio] Ajout nouvelles tâches + correctif sur les détails du projet Optim

--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@
 							<p>Intégratrice web (CDI)</p>
 							<ul>
 								<li>Intégration de maquettes</li>
-								<li>Refonte de sites web déjà existants</li>
+								<li>Développement de nouvelles fonctionnalités</li>
+								<li>Rédaction de documentation technique et fonctionnelle</li>
 							</ul>
 						</div>
 					</div>
@@ -659,13 +660,13 @@
 									<div class="align-left">
 										<h3 class="titre">2. Objectif</h3><br>
 
-										<p class="description">L'objectif d'OptimRessource est de faciliter la gestion de projets et d'avoir une vue globale aussi bien sur les projets en cours ou en passe d'être accepté, tout comme les ressources humaines affectées sur ces derniers.</p>
+										<p class="description">L'objectif d'OptimRessource est de faciliter la gestion de projets et d'avoir une vue globale aussi bien sur les projets en cours, mais aussi sur ceux en passe d'être acceptés, ainsi que les ressources humaines affectées sur ces derniers.</p>
 									</div>
 
 									<div class="align-left">
 										<h3 class="titre">3. Projet</h3><br>
 
-										<p class="description">OptimRessource est un projet interne, qui a terme aura pour but d'être commercialisé. Il permet au chef de projet d'avoir une vue d'ensemble sur ceux dont ils ont la charge. Aussi bien sur ce qu'il reste à faire, mais également les points bloquants pour lesquels il manque de ressources humaines par exemple.</p>
+										<p class="description">OptimRessource est un projet interne, qui a terme, aura pour but d'être commercialisé. Il permet au chef de projet d'avoir une vue d'ensemble sur l'avancé des projets. Aussi bien sur ce qu'il reste à faire, mais également les points bloquants pour lesquels il manque de ressources humaines par exemple.</p>
 									</div>
 
 									<div class="align-left">
